samples/chapter06/sample-named-port-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-named-port-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: nginx-container
        image: ezotaka/echo-nginx:arm64
        ports:
        - name: http
          containerPort: 80
