samples/chapter06/sample-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
spec:
  containers:
  - name: tools-container
    image: ezotaka/tools:arm64
