samples/chapter06/sample-lb-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-lb-local
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  healthCheckNodePort: 30086
  ports:
  - name: "http-port"
    protocol: "TCP"
    port: 8080
    targetPort: 80
    nodePort: 30081
  selector:
    app: sample-app
