samples/chapter06/sample-none-selector.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-none-selector
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sample-none-selector
subsets:
  - addresses:
      - ip: 10.244.4.2 # podのIPアドレスを指定
      - ip: 10.244.3.2
      - ip: 10.244.5.2
    ports:
      - protocol: TCP
        port: 80
