samples/chapter06/sample-ingress-by-nginx2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress-by-nginx2
  annotations:
    kubernetes.io/ingress.class: nginx2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: sample-ingress-default
      port:
        number: 8888

  rules:
    - host: sample.example.com
      http:
        paths:
          # - backend:
          #     service:
          #       name: sample-ingress-svc-1
          #       port:
          #         number: 8888
          #   path: /path1/
          #   pathType: Prefix
          - backend:
              service:
                name: sample-ingress-svc-2
                port:
                  number: 8888
            path: /path2/
            pathType: Prefix
  tls:
    - hosts:
        - sample.example.com
      secretName: tls-sample
